--- a/templates/invoices/Europe/style.css
+++ b/templates/invoices/Europe/style.css
@@ -1,42 +1,336 @@
+/*  
+SimpleInvoices Template
+<http://www.simpleinvoices.org>
 
-body { background: white; color: #444444; font-style: normal; font-size: 12pt; font-family: Arial , Veranda, San-Serif; }
+name:       Europe
+type:       invoice
+author:     Marco Janker
+date:       2014-04-13
+version:    1.0
+*/
 
-hr {color: #444444;}
+/* style sheet for "A4" printing */ 
+@media print and (width: 21cm) and (height: 29.7cm) {
+	@page {
+		size:A4 portrait;
+		margin:20mm 20mm 25mm 27mm;
+	}
+}
+
+/* style sheet for "letter" printing */
+@media print and (width: 8.5in) and (height: 11in) {
+	@page {
+		size:Letter portrait;
+		margin:.75in .75in 1in .75in;
+	}
+}
+
+body { 
+	margin:0;
+	padding:0;
+    background:#FFF;
+    font-family:Helvetica, san-serif;
+    font-size:12pt;
+    line-height:130%;
+    font-style:normal;
+    color:#444;
+}
+#wrapper {
+    margin:0 auto;
+    padding:0;
+}
+#header {
+    clear:both;
+}
+#invoice_body {
+    clear:both;
+}
+#footer {
+    clear:both;
+}
+
+/* Basic Elements */
+h1, h2, h3, h4, h5, h6 {
+    clear:both;
+    margin:0;
+    padding:2em 0 .5em 0;
+}
+p {
+    margin:0 0 1em 0;
+    padding:0;
+}
+img {
+    border-width:0;
+}
+ul, ol {
+    margin:0 0 1em 0;
+    padding:0;
+}
+ul li, 
+ol li {
+    list-style-position:outside;
+    margin:0 0 .6em 1.2em;
+    padding:0;
+}
+ul li > ul, 
+ul li > ol, 
+ol li > ul, 
+ol li > ol {
+    margin-top:.6em;
+}
+hr {
+    color:#444;
+}
 table {
-        border-spacing: 0;
-        border-collapse: collapse;
+    border-spacing:0;
+    border-collapse:collapse;
 }
-
-td {margin: 0px;      padding: 0px;}
-tr {margin: 0px;      padding: 0px;}
-
-.col1 { background-color: #EFEFEF; }
-
-.font1 { font-family: Arial; font-size: 14pt; }
-
-.font2 { color: #990000; font-size: 12pt; font-weight: bold; }
-
-.font3 { font-family: Arial; font-size: 8pt; }
-
-.tbl1 { border: #A0A0A0 1px solid; border-collapse:collapse; }
-.tbl1-left { border-left: #A0A0A0 1px solid; border-collapse:collapse; }
-.tbl1-right { border-right: #A0A0A0 1px solid; border-collapse:collapse; }
-.tbl1-bottom { border-bottom: #A0A0A0 1px solid; border-collapse:collapse; }
-.tbl1-top { border-top: #A0A0A0 1px solid; border-collapse:collapse; }
-
+td {
+    margin:0;
+    padding:0;
+    border-collapse:collapse;
+}
+tr {
+    margin:0;
+    padding:0;
+}
 .left {
- clear: left;
+    float:left;
 }
-
 .right {
- float: right;
+    float:right;
+}
+.desc {
+    color:#999;
 }
 
-.double_underline
-{
-	border-bottom: 3px double #555;
+/* Specific Elements */
+/* Header */
+#header {
+	position:absolute;
+	top:0;
+	right:.125in;
 }
-.si_product_attribute
-{
-    padding-right:20px;
+#invoice_title {
+    margin:0;
+    padding:.3em 0;
+    font-size:14pt;
+    text-align:center;
+    text-transform:uppercase;
+}
+img#logo {
+    float:right;
+    width:auto;
+    height:25mm;
+}
+
+/* Summary */
+#invoice_summary {
+	text-align:center;
+	padding:10px;
+	border:1px solid black;
+}
+#invoice_summary h2 {
+    display:none;
+}
+
+#invoice_summary ul {
+	margin-bottom: 0;
+}
+#invoice_summary li {
+    list-style:none;
+    margin:0;
+    /*font-size:8pt;*/
+    text-align:left;
+}
+#invoice_summary .desc {
+    padding:0 .5em 0 0;
+    float:left;
+    text-align:left;
+    width:9em;
+}
+
+/* Parties */
+#invoice_parties {
+	overflow:hidden;
+	width:50%;
+	margin:0;
+	padding:0;
+}
+#invoice_parties h2 {
+    padding-top:0;
+    /*font-size:8pt;*/
+    font-weight:normal;
+}
+#invoice_parties h3, 
+#invoice_parties h4 {
+    margin:0 0 .2em 0;
+    padding:0;
+}
+#invoice_parties div.party {
+    display:block;
+    margin:0;
+    padding:2em 0 0 0;
+}
+#invoice_parties #invoice_biller {
+	overflow:hidden;
+	margin:0 0 1em 0;
+	padding:0 0 1em 0;
+	border-bottom:solid 1pt #CCC;
+}
+#invoice_parties #invoice_customer {
+	padding-top:3em;
+}
+#invoice_parties .info_mail {
+	margin:0;
+	padding:0 5% 0 0;
+}
+#invoice_parties .info_other {
+	margin:0;
+	padding:0;
+}
+#invoice_parties .vcard div.adr, 
+#invoice_parties .vcard div.tel, 
+#invoice_parties .vcard div.fax, 
+#invoice_parties .vcard div.mobile, 
+#invoice_parties .vcard div.email, 
+#invoice_parties .vcard div.customfield {
+    font-size:90%;
+}
+#invoice_parties .vcard div.adr {
+	overflow:hidden;
+}
+#invoice_parties .vcard span.adr-block {
+	display:block;
+	float:left;
+}
+#invoice_parties .desc {
+    display:block;
+    float:left;
+    width:4em;
+    padding:0 1em 0 0;
+    text-align:right;
+}
+#invoice_parties .vcard div.adr .desc {
+	display:none;
+}
+
+
+/* Itemization */
+#invoice_itemization {
+    clear:both;
+    padding-top:7em;
+}
+#invoice_itemization h2 {
+    display:none;
+}
+#invoice_itemization .number {
+     font-family:Verdana,monospace;
+}
+#invoice_itemization table {
+    width:100%;
+    margin:0 0 1em 0;
+    padding:0;
+    border-style:solid;
+    border-color:#666;
+    border-width:0 0 1px 0;
+}
+#invoice_itemization th,
+#invoice_itemization td {
+    border-collapse:collapse;
+    padding:6px 12px;
+    border-style:solid;
+    border-color:#CCC;
+    border-width:1px 0 0 0;
+    text-align:left;
+}
+#invoice_itemization tr th:first-child,
+#invoice_itemization tr td:first-child {
+    border-left:none;
+}
+#invoice_itemization tr:first-child td {
+    border-top:none;
+}
+#invoice_itemization th {
+    background-color:#DEDEDE;
+    border-top:none;
+    border-bottom:solid 1px #666;
+}
+#invoice_itemization th.qty, 
+#invoice_itemization td.qty, 
+#invoice_itemization th.price-unit, 
+#invoice_itemization td.price-unit, 
+#invoice_itemization th.price-item, 
+#invoice_itemization td.price-item {
+    text-align:right;
+}
+#invoice_itemization td.qty {
+	vertical-align:top;
+    font-weight: bold;
+}
+#invoice_itemization span.item-title {
+    font-weight:bold;
+}
+#invoice_itemization span.item-detail {
+	display:block;
+    font-size:90%;
+}
+
+/* Totals */
+#invoice_totals {
+    float:right;
+    margin:0;
+    padding:0 0 0 8px;
+}
+#invoice_totals h2 {
+    display:none;
+}
+#invoice_totals .number {
+     font-family:Verdana,monospace;
+}
+#invoice_totals table {
+    margin:0 0 1em 0;
+    padding:0;
+}
+#invoice_totals td {
+    border-collapse:collapse;
+    padding:4px 12px 4px 1em;
+	text-align:right;
+}
+#invoice_totals td.desc {
+    /*width:8em;*/
+}
+#invoice_totals tr.total td {
+    border-top:solid 1px #444;
+}
+#invoice_totals tr.total td.desc {
+    font-weight:bold;
+    color:#000;
+}
+#invoice_totals tr.total strong {
+	display:block;
+	margin-right:-8px;
+    padding:4px 8px;
+    /*background-color:#FEFEB8;*/
+    border-bottom:3px double #444;
+    border-radius:4px 4px 0 0;
+    font-weight:bold;
+    font-size:120%;
+    color:#000;
+}
+
+/* Invoice notes */
+#invoice_notes {
+	border-bottom: 1px solid black;
+}
+	
+/* Details */
+#invoice_details h3 {
+    padding-top:.5em;
+}
+#invoice_details ul {
+	list-style:none;
+}
+#invoice_details li {
+	margin:0;
 }
